--- a/src/themes/spectaql/stylesheets/main.scss
+++ b/src/themes/spectaql/stylesheets/main.scss
@@ -507,6 +507,7 @@ $background-sidebar: $background-subtle;
   .deprecation-reason {
     &::before {
       display: inline;
+      word-break: break-all;
       content: 'Deprecated';
       padding: 2px math.div($content-padding, 4);
       margin-right: math.div($content-padding, 4);
